--- a/index.html
+++ b/index.html
@@ -29,7 +29,34 @@
               <img src="img/3 - isotipo de genarogg-final.png" alt="" />
             </div>
           </header>
-          
+          <main class="row col-xs-12">
+            <h2>Titulo</h2>
+            <hr />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum
+              expedita autem nemo rerum excepturi fugit nisi dolore corrupti nam
+              veritatis quasi sunt cumque numquam tempore delectus, voluptatem
+              magnam quis deleniti?
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum
+              expedita autem nemo rerum excepturi fugit nisi dolore corrupti nam
+              veritatis quasi sunt cumque numquam tempore delectus, voluptatem
+              magnam quis deleniti?
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum
+              expedita autem nemo rerum excepturi fugit nisi dolore corrupti nam
+              veritatis quasi sunt cumque numquam tempore delectus, voluptatem
+              magnam quis deleniti?
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum
+              expedita autem nemo rerum excepturi fugit nisi dolore corrupti nam
+              veritatis quasi sunt cumque numquam tempore delectus, voluptatem
+              magnam quis deleniti?
+            </p>
+          </main>
           
         </div>
       </div>
