--- a/index.html
+++ b/index.html
@@ -57,7 +57,77 @@
               magnam quis deleniti?
             </p>
           </main>
-          
+          <footer class="row col-xs-12">
+            <div class="col-xs-5 col-sm-3 containerImg">
+              <img class="imgMe" src="img/genarogg.webp" alt="" />
+            </div>
+            <div class="col-xs-7 col-sm-4">
+              <h3>
+                <span class="blue">G</span>enaro
+                <span class="blue">G</span>onzalez
+              </h3>
+
+              <p>Frontend developer</p>
+              <div class="redesSociales">
+                <ul class="row between-xs">
+                  <li class="col-xs">
+                    <a
+                      href="https://www.linkedin.com/in/genarogg"
+                      class="ico icon-linkedin linkedin"
+                      target="_blank"
+                    ></a>
+                  </li>
+                  <li class="col-xs">
+                    <a
+                      href="https://github.com/genarogg"
+                      class="ico icon-github github"
+                      target="_blank"
+                    ></a>
+                  </li>
+                  <li class="col-xs">
+                    <a
+                      href="https://www.instagram.com/gnarogg"
+                      class="ico icon-instagram instagram"
+                      target="_blank"
+                    ></a>
+                  </li>
+                  <li class="hidden col-xs">
+                    <a
+                      class="ico icon-phone phone"
+                      href="https://api.whatsapp.com/send?phone=5804127554970"
+                      ><span></span
+                    ></a>
+                  </li>
+                  <li class="hidden col-xs">
+                    <a
+                      class="ico icon-earth facebook"
+                      href="https://genarogg.tk"
+                      target="_blank"
+                    >
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-xs-1 borderLeftFooter"></div>
+            <div class="col-xs-12 col-sm-4 contacto">
+              <ul>
+                <li>
+                  <a href="https://api.whatsapp.com/send?phone=5804127554970"
+                    ><span class="ico icon-phone m phone"></span>+58 412 755 4970</a
+                  >
+                </li>
+                <li>
+                  <a href="https://genarogg.tk" target="_blank"
+                    ><span class="ico icon-earth facebook m"></span>genarogg.tk</a
+                  >
+                </li>
+                <li>
+                  <p><span class="ico icon-location-pin localitation m"></span>Maracay - Venezuela</p>
+                </li>
+              </ul>
+            </div>
+          </footer>
         </div>
       </div>
     </div>
