--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Email Template | Genarogg</title>
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
-    <link rel="stylesheet" href="css/icomoon/style.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/styleGenerico.css" />
   </head>
   <body>
     <div class="body">
+      <link rel="stylesheet" href="css/icomoon/style.css" />
+      <link rel="stylesheet" href="css/style.css" />
       <div class="container">
         <div class="row">
           <header class="row col-xs-12">
@@ -114,16 +115,21 @@
               <ul>
                 <li>
                   <a href="https://api.whatsapp.com/send?phone=5804127554970"
-                    ><span class="ico icon-phone m phone"></span>+58 412 755 4970</a
+                    ><span class="ico icon-phone m phone"></span>+58 412 755
+                    4970</a
                   >
                 </li>
                 <li>
                   <a href="https://genarogg.tk" target="_blank"
-                    ><span class="ico icon-earth facebook m"></span>genarogg.tk</a
+                    ><span class="ico icon-earth facebook m"></span
+                    >genarogg.tk</a
                   >
                 </li>
                 <li>
-                  <p><span class="ico icon-location-pin localitation m"></span>Maracay - Venezuela</p>
+                  <p>
+                    <span class="ico icon-location-pin localitation m"></span
+                    >Maracay - Venezuela
+                  </p>
                 </li>
               </ul>
             </div>
@@ -131,5 +137,8 @@
         </div>
       </div>
     </div>
+    <div id="buttonBrand"></div>
+    <!-- Carga de script -->
+    <script src="https://genarogg.github.io/link-To-my-brand/js/main.js"></script>
   </body>
 </html>
