--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
           <main class="row col-xs-12">
             <h2>Titulo</h2>
             <hr />
+            <p>mensaje</p>
             
           </main>
           <footer class="row col-xs-12">
